# Yaof

./: CMakeLists.txt
cmake/: FindFreeImage.cmake  FindTinyXML2.cmake
examples/: CMakeLists.txt
examples/HelloTriangle/: CMakeLists.txt  HelloTriangle.cpp
examples/HelloTriangle/resources/: triangle-fragment.glsl
examples/Test/: CMakeLists.txt  Test.cpp
examples/Test/resources/: test-fragment.glsl  test-resources.xml  test-vertex.glsl
extlibs/libs-msvc/x64/: tinyxml2.lib
extlibs/libs-msvc/x86/: tinyxml2.lib
include/Yaof/: Camera.hpp  Image.hpp  Yaof.hpp
include/Yaof/Core/: Application.hpp  Configuration.hpp  FpsLimiter.hpp  Resource.hpp  ResourceManager.hpp
include/Yaof/Graphics/: Shader.hpp  Texture.hpp
include/Yaof/Misc/: FileInputStream.hpp  InputStream.hpp  Macros.hpp  NonCopyable.hpp  Singleton.hpp  Singleton.inl  Vector3.hpp  Vector3.inl
include/Yaof/Window/: Window.hpp
src/Yaof/: CMakeLists.txt  Camera.cpp  Image.cpp
src/Yaof/Core/: Application.cpp  FpsLimiter.cpp  Resource.cpp  ResourceManager.cpp
src/Yaof/Graphics/: Shader.cpp  Texture.cpp
src/Yaof/Misc/: FileInputStream.cpp
src/Yaof/Window/: Window.cpp
